
5.41  2014-09-13
  - Fixed bug in Mojo::UserAgent where connections would sometimes not get
    closed correctly.

5.40  2014-09-12
  - Deprecated Mojo::EventEmitter::emit_safe.
  - Added reply->exception and reply->not_found helpers to
    Mojolicious::Plugin::DefaultHelpers.
  - Improved all events to handle exceptions the same.

5.39  2014-09-07
  - Improved decamelize performance.
  - Fixed bug in Mojo::Template where newline characters could get lost.

5.38  2014-09-05
  - Improved routes command to use new terminology for flags.
  - Fixed bug in Mojo::Util where tablify could not handle empty columns.

5.37  2014-09-03
  - Improved Mojo::Template performance slightly.
  - Fixed .ep template bug where the stash value "c" could no longer be used.

5.36  2014-09-02
  - Improved Mojo::Template performance.

5.35  2014-08-30
  - Improved monkey_patch to be able to name generated functions.

5.34  2014-08-29
  - Added original_remote_address attribute to Mojo::Transaction.
  - Fixed bug where Mojolicious::Commands would change @ARGV when loaded.

5.33  2014-08-24
  - Improved Mojo::Date to be able to handle higher precision times.
  - Improved Mojo::ByteStream performance.

5.32  2014-08-21
  - Added to_datetime method to Mojo::Date.
  - Improved Mojo::Date to support RFC 3339.

5.31  2014-08-19
  - Improved Mojolicious::Static to allow custom content types.
  - Improved url_for performance.

5.30  2014-08-17
  - Improved Mojolicious::Static to only handle GET and HEAD requests.
  - Improved Mojo::URL performance.
  - Improved url_for performance slightly.
  - Fixed bug where DATA sections sometimes got corrupted after forking, which
    caused applications to fail randomly.
  - Fixed Mojo::IOLoop::Client to use a timeout for every connection.

5.29  2014-08-16
  - Added helpers method to Mojolicious::Controller.
  - Improved performance of .ep templates slightly.
  - Fixed "0" value bug in Mojolicious::Plugin::EPRenderer.

5.28  2014-08-13