@@ -8,7 +8,7 @@ plan skip_all => 'Test::Pod::Coverage 1.04 required for this test!'
   unless eval 'use Test::Pod::Coverage 1.04; 1';
 
 # DEPRECATED in Tiger Face!
-my @tiger = ('emit_safe');
+my @tiger = (qw(emit_safe render_static));
 
 # False positive constants
 all_pod_coverage_ok({also_private => [qw(IPV6 TLS), @tiger]});
