@@ -1,5 +1,7 @@
 
 5.41  2014-09-13
+  - Deprecated Mojolicious::Controller::render_static in favor of
+    reply->static helper.
   - Fixed bug in Mojo::UserAgent where connections would sometimes not get
     closed correctly.
 
